Arreglaro y quite los kits porque no estaban ayudando

--- a/index.html
+++ b/index.html
@@ -1,94 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Lucheto</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lucheto</title>
 
-	<!--styles  -->
-	<link rel="stylesheet" href="assets/css/styles.css" />
-	<link rel="stylesheet" href="../assets/css/styles.css" />
+    <!--styles  -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
 
-	<!-- Motion -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
+    <!-- Motion -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
   </head>
 
   <body data-barba="wrapper">
-	<header class="header container">
-	  <a class="logo" href="/">Lucheto</a>
+    <header class="header container">
+      <a class="logo" href="/">Lucheto</a>
 
-	  <nav class="main-nav">
-		<ul>
-		  <li><a href="./about.html">About</a></li>
-		  <li><a href="./#portfolio-projects">Portfolio</a></li>
-		  <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
-		</ul>
-	  </nav>
-	</header>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./#portfolio-projects">Portfolio</a></li>
+          <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main data-barba="container" data-barba-namespace="home">
+      <section class="main home-main">
+        <div class="info">
+          <h1>
+            Hola, I’m Lucheto <br />
+            A UX/UI designer and Web developer
+          </h1>
+          <p>
+            I like finding creative marketing solutions through typography,
+            motion, and code. I have a strong marketing background but am
+            enamored by the design world.
+          </p>
 
-<main data-barba="container" data-barba-namespace="home">
+          <div class="cover"></div>
+          <a href="https://lucheto.com/about" class="read-more">Read more</a>
+        </div>
+      </section>
 
-    <section class="main home-main">
-      <div class="info">
-        <h1>
-          Hola, I’m Lucheto <br />
-          A UX/UI designer and Web developer
-        </h1>
-        <p>
-          I like finding creative marketing solutions through typography,
-          motion, and code. I have a strong marketing background but am enamored
-          by the design world.
-        </p>
+      <section id="portfolio-projects" class="main">
+        <h3>Recent Projects</h3>
+        <ul class="projects">
+          <li class="project">
+            <a href="portfolio/commander.html">Commander</a>
+          </li>
+          <li class="project">
+            <a href="portfolio/muebles-floks.html">Muebles Flok's</a>
+          </li>
+          <li class="project"><a href="portfolio/pardela.html">Pardela</a></li>
 
-        <div class="cover"></div>
-        <a href="https://lucheto.com/about" class="read-more">Read more</a>
-      </div>
-    </section>
+          <li class="project">
+            <a href="portfolio/aboga.html">Aboga Online</a>
+          </li>
+          <li class="project">
+            <a href="portfolio/sonia-luis.html">Sonia & Luis</a>
+          </li>
+        </ul>
+      </section>
+    </main>
 
-    <section id="portfolio-projects">
-      <h3>Recent Projects</h3>
-      <ul class="projects">
-<<<<<<< HEAD
-            <li class="project"><a href="portfolio/commander.html">Commander</a></li>
-            <li class="project"><a href="portfolio/muebles-floks.html">Muebles Flok's</a></li>
-            <li class="project"><a href="portfolio/pardela.html">Pardela</a></li>
-            
-            <li class="project"><a href="portfolio/aboga.html">Aboga Online</a></li>       
-            <li class="project"><a href="portfolio/sonia-luis.html">Sonia & Luis</a></li>
-=======
-        <li class="project"><a href="portfolio/aboga.html">Aboga Online</a></li>
-        <li class="project"><a href="portfolio/pardela.html">Pardela</a></li>
-        <li class="project"><a href="portfolio/muebles-floks.html">Muebles Flok's</a></li>
-        <li class="project"><a href="portfolio/sonia-luis.html">Sonia & Luis</a></li>
->>>>>>> parent of d3bd974 (Estaba hacia la izquierda la página. Ya no)
-      </ul>
-    </section>
+    <div class="main">
+      <footer class="footer">
+        <div class="contact-footer">
+          <h3>Let's create something new</h3>
+          <p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
+          <p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
+        </div>
 
-</main>
-
-
-<div class="main">
-	<footer class="footer">
-			<div class="contact-footer">
-				<h3>Let's create something new</h3>
-				<p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
-				<p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
-			</div>
-
-			<div class="socials">
-				<h3>Socials</h3>
-				<ul>
-					<li><a href="https://www.linkedin.com/in/lucheto-uxui/"><img src="assets/img/linkedin-woodmark.svg" alt="linkedin logo"></a></li>
-					<li><a href="https://hashnode.com/@lucheto"><img src="assets/img/hashnode-logo.svg" alt="logo hashnode"></a></li>
-					<li><a href="https://github.com/luchetocsl"><img src="assets/img/github-logo.svg" alt="logo github"></a></li>
-					<li><a href="https://www.polywork.com/lucheto"><img src="assets/img/poly-logo-black.svg" alt="logo polyworks"></a></li>
-				</ul>
-			</div>
-	</footer>
-</div>
-	<script src="assets/js/app-min.js"></script>
+        <div class="socials">
+          <h3>Socials</h3>
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/in/lucheto-uxui/"
+                ><img
+                  src="assets/img/linkedin-woodmark.svg"
+                  alt="linkedin logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://hashnode.com/@lucheto"
+                ><img src="assets/img/hashnode-logo.svg" alt="logo hashnode"
+              /></a>
+            </li>
+            <li>
+              <a href="https://github.com/luchetocsl"
+                ><img src="assets/img/github-logo.svg" alt="logo github"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.polywork.com/lucheto"
+                ><img src="assets/img/poly-logo-black.svg" alt="logo polyworks"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+    <script src="assets/js/app-min.js"></script>
   </body>
 </html>
