--- a/portfolio/aboga.html
+++ b/portfolio/aboga.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
 
-    <main class="portfolio">
+    <main class="portfolio main">
       <section class="title-image">
         <h2>Aboga Online</h2>
       </section>
