Added Commander images adn live site links

--- a/portfolio/muebles-floks.html
+++ b/portfolio/muebles-floks.html
@@ -215,6 +215,8 @@
           src="../../assets/img/floks/mockup1floks-.jpg"
           alt="Main mockup 2"
         />
+
+        <a href="https://floks.mx/" class="read-more">Go to Live Site</a>
       </section>
     </main>
 
