--- a/portfolio/pardela.html
+++ b/portfolio/pardela.html
@@ -167,6 +167,8 @@
             "
           ></iframe>
         </div>
+
+        <a href="https://pardela.mx/" class="read-more">Go to Live Site</a>
       </section>
     </main>
 
