--- a/portfolio/sonia-luis.html
+++ b/portfolio/sonia-luis.html
@@ -13,6 +13,22 @@
     <!-- Motion -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-96737438-1"
+    ></script>
+
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-96737438-1");
+    </script>
   </head>
 
   <body data-barba="wrapper">
