--- a/about.html
+++ b/about.html
@@ -1,59 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Lucheto</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lucheto</title>
 
-	<!--styles  -->
-	<link rel="stylesheet" href="assets/css/styles.css" />
-	<link rel="stylesheet" href="../assets/css/styles.css" />
+    <!--styles  -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
 
-	<!-- Motion -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
+    <!-- Motion -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-96737438-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-96737438-1");
+    </script>
   </head>
 
   <body data-barba="wrapper">
-	<header class="header container">
-	  <a class="logo" href="/">Lucheto</a>
+    <header class="header container">
+      <a class="logo" href="/">Lucheto</a>
 
-	  <nav class="main-nav">
-		<ul>
-		  <li><a href="./about.html">About</a></li>
-		  <li><a href="./#portfolio-projects">Portfolio</a></li>
-		  <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
-		</ul>
-	  </nav>
-	</header>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./#portfolio-projects">Portfolio</a></li>
+          <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main data-barba="container" data-barba-namespace="about">
+      <section class="main about-main">
+        <div class="info">
+          <h2>Hi there!</h2>
 
-<main data-barba="container" data-barba-namespace="about">
-  <section class="main about-main">
-    <div class="info">
-    <h2>Hi there!</h2>
+          <p>
+            <span class="cta-text"
+              >Do you need a designer to bring your ideas to life? <br />
+              Drop me a line at
+              <a href="mailto:hola@lucheto.com"> hola@lucheto.com</a></span
+            >
+          </p>
 
-    <p><span class="cta-text">Do you need a designer to bring your ideas to life? <br>
-    Drop me a line at <a href="mailto:hola@lucheto.com"> hola@lucheto.com</a></span></p>
+          <p class="small available">Available for freelance work</p>
 
-    <p class="small available">Available for freelance work</p>
+          <p>
+            I am a UX/UI designer from Mexico City. Currently, I'm working at
+            <a href="https://progroupx.com/">proGroupX</a> remotely.
+          </p>
 
+          <p>
+            From 2015 to 2021, I worked at a small web design agency called
+            &quot;Cómo se llama&quot; which I founded, where we developed all
+            kinds of websites, especially using WordPress.
+          </p>
 
-    <p>I am a UX/UI designer from Mexico City. Currently, I'm working at <a href="https://progroupx.com/">proGroupX</a> remotely. </p>
+          <p>
+            I am a vetted
+            <a href="https://www.codeable.io/">Codeable</a> expert. Codeable is
+            the only WordPress specialized freelancing site.
+          </p>
 
-    <p>From 2015 to 2021, I worked at a small web design agency called &quot;Cómo se llama&quot; which I founded, where we developed all kinds of websites, especially using WordPress. </p>
+          <p>
+            I am always learning new things. Right now, I'm obsessed with UX
+            processes and JamStack. However, in my free time, I'm learning about
+            crypto and NFTs.
+          </p>
+        </div>
+      </section>
 
-    <p>I am a vetted <a href="https://www.codeable.io/">Codeable</a> expert. Codeable is the only WordPress specialized freelancing site. </p>
-
-    <p>I am always learning new things. Right now, I'm obsessed with UX processes and JamStack. However, in my free time, I'm learning about crypto and NFTs.</p>
-    </div>
-
-
-
-  </section>
-
-  <section class="certs">
-   <a target="_blank" href="https://www.credential.net/bbea73d5-c031-4f83-b6c0-7de86e2837e5"> <img src="https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/41656411" alt="Codeable Certification"></a>
-  </section>
-</main>
+      <section class="certs">
+        <a
+          target="_blank"
+          href="https://www.credential.net/bbea73d5-c031-4f83-b6c0-7de86e2837e5"
+        >
+          <img
+            src="https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/41656411"
+            alt="Codeable Certification"
+        /></a>
+      </section>
+    </main>
+  </body>
+</html>
