fixed floks image and sonia luis listing

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <li class="project">
             <a href="portfolio/aboga.html">Aboga Online</a>
           </li>
-          <li class="project">
+          <!--           <li class="project">
             <a href="portfolio/sonia-luis.html">Sonia & Luis</a>
-          </li>
+          </li> -->
         </ul>
       </section>
     </main>
