--- a/about.html
+++ b/about.html
@@ -1,98 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Lucheto</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Lucheto</title>
 
-    <!--styles  -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="../assets/css/styles.css" />
+		<!--styles  -->
+		<link rel="stylesheet" href="assets/css/styles.css" />
+		<link rel="stylesheet" href="../assets/css/styles.css" />
 
-    <!-- Motion -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
+		<!-- Motion -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-96737438-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-96737438-1"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
 
-      gtag("config", "UA-96737438-1");
-    </script>
-  </head>
+			gtag("config", "UA-96737438-1");
+		</script>
+	</head>
 
-  <body data-barba="wrapper">
-    <header class="header container">
-      <a class="logo" href="/">Lucheto</a>
+	<body>
+		<header class="header container">
+			<a class="logo" href="/">Lucheto</a>
 
-      <nav class="main-nav">
-        <ul>
-          <li><a href="./about.html">About</a></li>
-          <li><a href="./#portfolio-projects">Portfolio</a></li>
-          <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
-        </ul>
-      </nav>
-    </header>
+			<nav class="main-nav">
+				<ul>
+					<li><a href="./about.html">About</a></li>
+					<li><a href="./#portfolio-projects">Portfolio</a></li>
+					<li><a href="https://hashnode.com/@lucheto">Blog</a></li>
+				</ul>
+			</nav>
+		</header>
 
-    <main data-barba="container" data-barba-namespace="about">
-      <section class="main about-main">
-        <div class="info">
-          <h2>Hi there!</h2>
+		<main>
+			<section class="main about-main">
+				<div class="info">
+					<h2>Hi there!</h2>
 
-          <p>
-            <span class="cta-text"
-              >Do you need a designer to bring your ideas to life? <br />
-              Drop me a line at
-              <a href="mailto:hola@lucheto.com"> hola@lucheto.com</a></span
-            >
-          </p>
+					<p>
+						<span class="cta-text"
+							>Do you need a designer to bring your ideas to life? <br />
+							Drop me a line at
+							<a href="mailto:hola@lucheto.com"> hola@lucheto.com</a></span
+						>
+					</p>
 
-          <p class="small available">Available for freelance work</p>
+					<p class="small available">Available for freelance work</p>
 
-          <p>
-            I am a UX/UI designer from Mexico City. Currently, I'm working at
-            <a href="https://progroupx.com/">proGroupX</a> remotely.
-          </p>
+					<p>
+						I am a UX/UI designer from Mexico City. Currently, I'm working at
+						<a href="https://progroupx.com/">proGroupX</a> remotely.
+					</p>
 
-          <p>
-            From 2015 to 2021, I worked at a small web design agency called
-            &quot;Cómo se llama&quot; which I founded, where we developed all
-            kinds of websites, especially using WordPress.
-          </p>
+					<p>
+						From 2015 to 2021, I worked at a small web design agency called
+						&quot;Cómo se llama&quot; which I founded, where we developed all
+						kinds of websites, especially using WordPress.
+					</p>
 
-          <p>
-            I am a vetted
-            <a href="https://www.codeable.io/">Codeable</a> expert. Codeable is
-            the only WordPress specialized freelancing site.
-          </p>
+					<p>
+						I am a vetted
+						<a href="https://www.codeable.io/">Codeable</a> expert. Codeable is
+						the only WordPress specialized freelancing site.
+					</p>
 
-          <p>
-            I am always learning new things. Right now, I'm obsessed with UX
-            processes and JamStack. However, in my free time, I'm learning about
-            crypto and NFTs.
-          </p>
-        </div>
-      </section>
+					<p>
+						I am always learning new things. Right now, I'm obsessed with UX
+						processes and JamStack. However, in my free time, I'm learning about
+						crypto and NFTs.
+					</p>
+				</div>
 
-      <section class="certs">
-        <a
-          target="_blank"
-          href="https://www.credential.net/bbea73d5-c031-4f83-b6c0-7de86e2837e5"
-        >
-          <img
-            src="https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/41656411"
-            alt="Codeable Certification"
-        /></a>
-      </section>
-    </main>
-  </body>
+				<section class="sidebar">
+					<h3>Recent Work Experience</h3>
+					<p>
+						<a
+							target="_blank"
+							class="available"
+							href="https://github.com/luchetocsl/luchetocsl.github.io/raw/main/Resume_LuisEnriqueMart%C3%ADnezPadilla_2022.pdf"
+						>
+							Click here to download my resume
+						</a>
+					</p>
+					<br />
+					<br />
+					<h4>proGroupX</h4>
+					<p>Email Marketing</p>
+					<h5>Web Designer</h5>
+					<ul>
+						<li>Designed email templates for 10+ different brands.</li>
+						<li>
+							Developed websites and landing pages in WordPress and Next.js
+						</li>
+						<li>
+							Prepared user flows, wireframes, mockups and visual elements for 4
+							new projects
+						</li>
+					</ul>
+
+					<hr />
+
+					<h4>Cómo se Llama</h4>
+					<p>Marketing and Advertising</p>
+					<h5>Account Manager and Web Designer</h5>
+					<ul>
+						<li>
+							Designed engaging wireframes, information architecture, and
+							sketches according to the clients’ objectives, achieving a faster
+							development.
+						</li>
+						<li>
+							Created multiple websites (approximately 10 new per year); led and
+							coordinated a multidisciplinary team to increase by 150% the
+							website leads of a language school
+						</li>
+						<li>
+							Managed 10+ simultaneous projects; led a team of 4 people in
+							various projects.
+						</li>
+					</ul>
+				</section>
+			</section>
+
+			<section class="certs">
+				<a
+					target="_blank"
+					href="https://www.credential.net/bbea73d5-c031-4f83-b6c0-7de86e2837e5"
+				>
+					<img
+						src="https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/41656411"
+						alt="Codeable Certification"
+				/></a>
+			</section>
+		</main>
+	</body>
 </html>
