--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <!-- Motion -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -30,7 +29,7 @@
     </script>
   </head>
 
-  <body data-barba="wrapper">
+  <body>
     <header class="header container">
       <a class="logo" href="/">Lucheto</a>
 
@@ -43,7 +42,7 @@
       </nav>
     </header>
 
-    <main data-barba="container" data-barba-namespace="home">
+    <main>
       <section class="main home-main">
         <div class="info">
           <h1>
