--- a/portfolio/aboga.html
+++ b/portfolio/aboga.html
@@ -1,303 +1,364 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Lucheto</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Lucheto - Portfolio Aboga Online</title>
 
-    <!--styles  -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="../assets/css/styles.css" />
+		<!--styles  -->
+		<link rel="stylesheet" href="assets/css/styles.css" />
+		<link rel="stylesheet" href="../assets/css/styles.css" />
 
-    <!-- Motion -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+		<!-- Motion -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-96737438-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-96737438-1"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
 
-      gtag("config", "UA-96737438-1");
-    </script>
-  </head>
+			gtag("config", "UA-96737438-1");
+		</script>
+	</head>
 
-  <body>
-    <header class="header container">
-      <a class="logo" href="/">Lucheto</a>
+	<body>
+		<header class="header container">
+			<a class="logo" href="/">Lucheto</a>
 
-      <nav class="main-nav">
-        <ul>
-          <li><a href="../about.html">About</a></li>
-          <li><a href="../#portfolio-projects">Portfolio</a></li>
-          <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
-        </ul>
-      </nav>
-    </header>
+			<nav class="main-nav">
+				<ul>
+					<li><a href="../about.html">About</a></li>
+					<li><a href="../#portfolio-projects">Portfolio</a></li>
+					<li><a href="https://hashnode.com/@lucheto">Blog</a></li>
+				</ul>
+			</nav>
+		</header>
 
-    <main class="portfolio main">
-      <section class="title-image">
-        <h2>Aboga Online</h2>
-      </section>
+		<main class="portfolio main">
+			<section class="title-image">
+				<h1>Aboga Online</h1>
+				<img
+					src="../../assets/img/aboga_online/first_image.jpg"
+					alt="Main screen"
+				/>
+			</section>
 
-      <section class="role-team">
-        <div>
-          <h4>Role</h4>
-          <ul>
-            <li>User Experience Design</li>
-            <li>Visual Designer</li>
-            <li>Information Architecture</li>
-            <li>No-code developer</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Team</h4>
-          <ul>
-            <li>Luis Martinez (Me)</li>
-            <li>Aboga Online</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Client</h4>
-          <ul>
-            <li>Aboga Online</li>
-          </ul>
-        </div>
-      </section>
+			<section class="role-team">
+				<div>
+					<h4>Role</h4>
+					<ul>
+						<li>User Experience Design</li>
+						<li>Visual Designer</li>
+						<li>Information Architecture</li>
+						<li>No-code developer</li>
+					</ul>
+				</div>
+				<div>
+					<h4>Team</h4>
+					<ul>
+						<li>Luis Martinez (Me)</li>
+						<li>Aboga Online</li>
+					</ul>
+				</div>
+				<div>
+					<h4>Client</h4>
+					<ul>
+						<li>Aboga Online</li>
+					</ul>
+				</div>
+			</section>
 
-      <section class="intro">
-        <img
-          src="../../assets/img/aboga_online/first_image.jpg"
-          alt="Main screen"
-        />
-        <h2>The client</h2>
+			<section class="intro">
+				<figure class="vertical-image">
+					<img src="../../assets/img/aboga_online/aboga_notes.jpg" />
+					<figcaption>
+						<p>
+							In the beginning, Aboga Online wanted to be everything for
+							everyone.
+						</p>
 
-        <p>
-          Aboga Online is a marketplace by and for lawyers. The website serves
-          three purposes:
-        </p>
+						<p>
+							I felt it was essential to manage expectations. I do believe with
+							enough work and time, Aboga can become as big as it needs to be,
+							but growth needs to be planned.
+						</p>
 
-        <ul>
-          <li>To be able to hire trustworthy, vetted lawyers</li>
-          <li>A place for lawyers to network and solve problems together</li>
-          <li>A hub where lawyers can find the latest news and webinars</li>
-        </ul>
+						<p>
+							This is the list of all the features planned/mentioned at some
+							point in our first meeting, and my final selection (marked with
+							red ink)
+						</p>
+					</figcaption>
+				</figure>
 
-        <h2>The problem</h2>
+				<section class="summary">
+					<div>
+						<h2>The client</h2>
 
-        <p>
-          I was tasked to design and program the website from the ground up. The
-          major hurdle was to show that Aboga Online is not just another
-          marketplace looking for cheap labor.
-        </p>
+						<p>
+							Aboga Online is a marketplace by and for lawyers. The website
+							serves three purposes:
+						</p>
 
-        <p>
-          At the same time, we needed to attract lots of lawyers. So the value
-          of Aboga Online depends on the size of its community.
-        </p>
+						<ul>
+							<li>To be able to hire trustworthy, vetted lawyers</li>
+							<li>
+								A place for lawyers to network and solve problems together
+							</li>
+							<li>A hub where lawyers can find the latest news and webinars</li>
+						</ul>
+					</div>
 
-        <h2>The solution</h2>
+					<div>
+						<h2>The problem</h2>
 
-        <p>I designed a website with three distinct sections:</p>
+						<p>
+							I was tasked to design and program the website from the ground up.
+							The major hurdle was to show that Aboga Online is not just another
+							marketplace looking for cheap labor.
+						</p>
 
-        <ul>
-          <li>Job Board</li>
-          <li>Community</li>
-          <li>Events</li>
-        </ul>
+						<p>
+							At the same time, we needed to attract lots of lawyers. So the
+							value of Aboga Online depends on the size of its community.
+						</p>
+					</div>
+					<div>
+						<h2>The solution</h2>
 
-        <p>We grew to 200 members in the first two months.</p>
+						<p>I designed a website with three distinct sections:</p>
 
-        <h2>The Process</h2>
+						<ul>
+							<li>Job Board</li>
+							<li>Community</li>
+							<li>Events</li>
+						</ul>
 
-        <p>
-          Most lawyers are specialists, so they rarely dabble in other cases.
-        </p>
+						<p>We grew to 200 members in the first two months.</p>
+					</div>
+				</section>
 
-        <p>
-          However, this doesn't stop their clients from asking fr other
-          services. Instead, they are obliged to refer them to other lawyers.
-          Lorelei approached me to design a site where lawyers could network and
-          meet lawyers from other disciplines.
-        </p>
+				<h2>The Process</h2>
 
-        <p>
-          This site should allow consolidated lawyers to create profiles and
-          show off their past work while letting recent graduates find mentors
-          or network to find a job.
-        </p>
+				<p>
+					Most lawyers are specialists, so they rarely dabble in other cases.
+				</p>
 
-        <img
-          src="../../assets/img/aboga_online/iphone_mockup.jpg"
-          alt="Iphone Mockup"
-        />
+				<p>
+					However, this doesn't stop their clients from asking fr other
+					services. Instead, they are obliged to refer them to other lawyers.
+					Lorelei approached me to design a site where lawyers could network and
+					meet lawyers from other disciplines.
+				</p>
 
-        <p>
-          The first description of this site was &quot;LinkedIn for
-          lawyers.&quot;
-        </p>
+				<p>
+					This site should allow consolidated lawyers to create profiles and
+					show off their past work while letting recent graduates find mentors
+					or network to find a job.
+				</p>
 
-        <p>
-          We looked for communities for lawyers and realized that there are only
-          offline communities in Mexico. So Aboga Online was the first online
-          community for lawyers.
-        </p>
+				<img
+					src="../../assets/img/aboga_online/iphone_mockup.jpg"
+					alt="Iphone Mockup"
+				/>
 
-        <img src="../../assets/img/aboga_online/ipad.jpg" alt="Ipad Mockup" />
+				<p>
+					The first description of this site was &quot;LinkedIn for
+					lawyers.&quot;
+				</p>
 
-        <p>
-          We decided to focus our research on other established communities. For
-          example, designers, developers, digital marketing experts, etc., are
-          already running online communities.
-        </p>
+				<p>
+					We looked for communities for lawyers and realized that there are only
+					offline communities in Mexico. So Aboga Online was the first online
+					community for lawyers.
+				</p>
 
-        <p>
-          Most communities run either on &quot;circle.so&quot; or slack. We did
-          a trial run with a few test subjects and realized that most lawyers
-          are not tech-savvy enough to use either of these platforms.
-        </p>
+				<img src="../../assets/img/aboga_online/ipad.jpg" alt="Ipad Mockup" />
 
-        <p>
-          Since the project was financed by investors with specific rules,
-          paying a monthly fee for a saas was an obstacle as they preferred to
-          pay once and forget about it.
-        </p>
+				<p>
+					We decided to focus our research on other established communities. For
+					example, designers, developers, digital marketing experts, etc., are
+					already running online communities.
+				</p>
 
-        <p>
-          So, we decided the whole platform would have to run on WordPress. This
-          way, we would control every aspect of the platform.
-        </p>
+				<p>
+					Most communities run either on &quot;circle.so&quot; or slack. We did
+					a trial run with a few test subjects and realized that most lawyers
+					are not tech-savvy enough to use either of these platforms.
+				</p>
 
-        <p>We found there would be four primary users of Aboga Online</p>
+				<p>
+					Since the project was financed by investors with specific rules,
+					paying a monthly fee for a saas was an obstacle as they preferred to
+					pay once and forget about it.
+				</p>
 
-        <img src="../../assets/img/aboga_online/users.jpg" alt="Avatars" />
+				<p>
+					So, we decided the whole platform would have to run on WordPress. This
+					way, we would control every aspect of the platform.
+				</p>
 
-        <ul>
-          <li>New graduates</li>
-          <li>Consolidated lawyers</li>
-          <li>Freelancers</li>
-          <li>Lawyers looking for online education</li>
-        </ul>
+				<p>We found there would be four primary users of Aboga Online</p>
 
-        <p>
-          I created user flows for every type of visitor. This way, I noticed
-          commonalities and designed the main screens.
-        </p>
+				<figure>
+					<img src="../../assets/img/aboga_online/users.jpg" alt="Avatars" />
+					<figcaption>
+						<p>
+							Based on our interviews, we created three avatars. These avatars
+							helped us understand the target audience and their paint points.
+						</p>
+					</figcaption>
+				</figure>
 
-        <img
-          src="../../assets/img/aboga_online/userflow.jpg"
-          alt="User Flows"
-        />
+				<ul>
+					<li>New graduates</li>
+					<li>Consolidated lawyers</li>
+					<li>Freelancers</li>
+					<li>Lawyers looking for online education</li>
+				</ul>
 
-        <p>
-          I used Figma to design three different homepages with the same content
-          but different aesthetics. That way, it was easier for Lorelei to
-          choose a look and feel for the rest of the site.
-        </p>
+				<p>
+					I created user flows for every type of visitor. This way, I noticed
+					commonalities and designed the main screens.
+				</p>
 
-        <img src="../../assets/img/aboga_online/mockups-1.jpg" alt="Mockups" />
+				<figure>
+					<img
+						src="../../assets/img/aboga_online/userflow.jpg"
+						alt="User Flows"
+					/>
+					<figcaption>
+						<p>
+							The next step was to map the flow an average user would take to
+							signup for an event.
+						</p>
+						<p>
+							During this step, we noticed we didn't have a straightforward way
+							to sign our users to the platform. We were relying solely on
+							universities and practices to fill our databases
+						</p>
+					</figcaption>
+				</figure>
 
-        <p>Once we had a homepage, I could design the other screens.</p>
+				<p>
+					I used Figma to design three different homepages with the same content
+					but different aesthetics. That way, it was easier for Lorelei to
+					choose a look and feel for the rest of the site.
+				</p>
 
-        <p>
-          Before coding, we created a no-code version of the site to see if our
-          users were following the flows as we intended. We used tools like air
-          table, carrd, and slack.
-        </p>
+				<img src="../../assets/img/aboga_online/mockups-1.jpg" alt="Mockups" />
 
-        <img
-          src="../../assets/img/aboga_online/mockups.jpg"
-          alt="Detailed Mockups"
-        />
+				<p>Once we had a homepage, I could design the other screens.</p>
 
-        <p>
-          We realized our job board needed a filtering system. People were
-          posting low-quality jobs, which in turn hurt our reputation.
-        </p>
+				<p>
+					Before coding, we created a no-code version of the site to see if our
+					users were following the flows as we intended. We used tools like air
+					table, carrd, and slack.
+				</p>
 
-        <p>
-          Our solution was to make all jobs submitted archived for review
-          instead of automatically publishing on the site.
-        </p>
+				<img
+					src="../../assets/img/aboga_online/mockups.jpg"
+					alt="Detailed Mockups"
+				/>
 
-        <p>
-          It also allowed me to show Lorelei and her investors all the moving
-          pieces of the site. Thus, we prioritized which sections needed to be
-          coded and completed first.
-        </p>
+				<p>
+					We realized our job board needed a filtering system. People were
+					posting low-quality jobs, which in turn hurt our reputation.
+				</p>
 
-        <img
-          src="../../assets/img/aboga_online/screens.jpg"
-          alt="Different screens"
-        />
+				<p>
+					Our solution was to make all jobs submitted archived for review
+					instead of automatically publishing on the site.
+				</p>
 
-        <p>
-          These changes meant we had to push the due date. However, we should
-          save money and streamline the user flows in the long run.
-        </p>
+				<p>
+					It also allowed me to show Lorelei and her investors all the moving
+					pieces of the site. Thus, we prioritized which sections needed to be
+					coded and completed first.
+				</p>
 
-        <p>
-          We launched in March of 2020 and grew to 200 members organically in
-          the next two months. However, it was put on hold when Lorelei, the
-          project owner, became ill and was no longer available to carry out the
-          project.
-        </p>
+				<figure>
+					<img
+						src="../../assets/img/aboga_online/screens.jpg"
+						alt="Different screens"
+					/>
+					<figcaption>
+						<p>
+							We used FigJam, one of Figma's collaboration tools, to get the
+							stakeholders on the same page. We were able to define the most
+							important screens for one first step.
+						</p>
+					</figcaption>
+				</figure>
 
-        <p>The domain is still registered, but it redirects to a blank page.</p>
+				<p>
+					These changes meant we had to push the due date. However, we should
+					save money and streamline the user flows in the long run.
+				</p>
 
-        <img
-          src="../../assets/img/aboga_online/start-end.gif"
-          alt="Site animation"
-        />
-      </section>
-    </main>
+				<p>
+					We launched in March of 2020 and grew to 200 members organically in
+					the next two months. However, it was put on hold when Lorelei, the
+					project owner, became ill and was no longer available to carry out the
+					project.
+				</p>
 
-    <div class="main">
-      <footer class="footer">
-        <div class="contact-footer">
-          <h3>Let's create something new</h3>
-          <p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
-          <p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
-        </div>
+				<p>The domain is still registered, but it redirects to a blank page.</p>
 
-        <div class="socials">
-          <h3>Socials</h3>
-          <ul>
-            <li>
-              <a href="https://www.linkedin.com/in/lucheto-uxui/"
-                ><img
-                  src="../assets/img/linkedin-woodmark.svg"
-                  alt="linkedin logo"
-              /></a>
-            </li>
-            <li>
-              <a href="https://hashnode.com/@lucheto"
-                ><img src="../assets/img/hashnode-logo.svg" alt="logo hashnode"
-              /></a>
-            </li>
-            <li>
-              <a href="https://github.com/luchetocsl"
-                ><img src="../assets/img/github-logo.svg" alt="logo github"
-              /></a>
-            </li>
-            <li>
-              <a href="https://www.polywork.com/lucheto"
-                ><img
-                  src="../assets/img/poly-logo-black.svg"
-                  alt="logo polyworks"
-              /></a>
-            </li>
-          </ul>
-        </div>
-      </footer>
-    </div>
-    <script src="../assets/js/app-min.js"></script>
-  </body>
+				<img
+					src="../../assets/img/aboga_online/start-end.gif"
+					alt="Site animation"
+				/>
+			</section>
+		</main>
+
+		<div class="main">
+			<footer class="footer">
+				<div class="contact-footer">
+					<h3>Let's create something new</h3>
+					<p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
+					<p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
+				</div>
+
+				<div class="socials">
+					<h3>Socials</h3>
+					<ul>
+						<li>
+							<a href="https://www.linkedin.com/in/lucheto-uxui/"
+								><img
+									src="../assets/img/linkedin-woodmark.svg"
+									alt="linkedin logo"
+							/></a>
+						</li>
+						<li>
+							<a href="https://hashnode.com/@lucheto"
+								><img src="../assets/img/hashnode-logo.svg" alt="logo hashnode"
+							/></a>
+						</li>
+						<li>
+							<a href="https://github.com/luchetocsl"
+								><img src="../assets/img/github-logo.svg" alt="logo github"
+							/></a>
+						</li>
+						<li>
+							<a href="https://www.polywork.com/lucheto"
+								><img
+									src="../assets/img/poly-logo-black.svg"
+									alt="logo polyworks"
+							/></a>
+						</li>
+					</ul>
+				</div>
+			</footer>
+		</div>
+		<script src="../assets/js/app-min.js"></script>
+	</body>
 </html>
