--- a/about.html
+++ b/about.html
@@ -42,17 +42,17 @@
 			</nav>
 		</header>
 
-		<main>
+		<main class="container">
 			<section class="main about-main">
 				<div class="info">
-					<h2>Hi there!</h2>
+					<h1>Hi there!</h1>
 
 					<p>
-						<span class="cta-text"
-							>Do you need a designer to bring your ideas to life? <br />
+						<span class="cta-text">
+							Do you need a designer to bring your ideas to life? <br />
 							Drop me a line at
-							<a href="mailto:hola@lucheto.com"> hola@lucheto.com</a></span
-						>
+							<a href="mailto:hola@lucheto.com"> hola@lucheto.com</a>
+						</span>
 					</p>
 
 					<p class="small available">Available for freelance work</p>
