Logos estaba en minuscula

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<section class="worked-with">
 						<p>These are some of the brands I've worked with:</p>
 						<div class="logos">
-							<img src="assets/img/logos/logos.png" />
+							<img src="assets/img/logos/Logos.png" />
 						</div>
 					</section>
 
