removed phone and added cv

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 						<a
 							target="_blank"
 							class="available"
-							href="https://github.com/luchetocsl/luchetocsl.github.io/raw/main/Resume_LuisEnriqueMart%C3%ADnezPadilla_2022.pdf"
+							href="https://github.com/luchetocsl/luchetocsl.github.io/raw/main/Luis_Martinez_UX_22.pdf"
 						>
 							Click here to download my resume
 						</a>
@@ -143,5 +143,44 @@
 				/></a>
 			</section>
 		</main>
+
+		<div class="main">
+			<footer class="footer">
+				<div class="contact-footer">
+					<h3>Let's create something new</h3>
+					<p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
+					<!-- <!-- <p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p> -->
+					-->
+				</div>
+
+				<div class="socials">
+					<h3>Socials</h3>
+					<ul>
+						<li>
+							<a href="https://www.linkedin.com/in/lucheto-uxui/"
+								><img
+									src="assets/img/linkedin-woodmark.svg"
+									alt="linkedin logo"
+							/></a>
+						</li>
+						<li>
+							<a href="https://hashnode.com/@lucheto"
+								><img src="assets/img/hashnode-logo.svg" alt="logo hashnode"
+							/></a>
+						</li>
+						<li>
+							<a href="https://github.com/luchetocsl"
+								><img src="assets/img/github-logo.svg" alt="logo github"
+							/></a>
+						</li>
+						<li>
+							<a href="https://www.polywork.com/lucheto"
+								><img src="assets/img/poly-logo-black.svg" alt="logo polyworks"
+							/></a>
+						</li>
+					</ul>
+				</div>
+			</footer>
+		</div>
 	</body>
 </html>
