Fixed few small things

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Lucheto</title>
+		<title>Luis Martinez - UX Developer</title>
 
 		<!--styles  -->
 		<link rel="stylesheet" href="assets/css/styles.css" />
@@ -31,7 +31,7 @@
 
 	<body>
 		<header class="header container">
-			<a class="logo" href="/">Lucheto</a>
+			<a class="logo" href="/">Luis Martinez</a>
 
 			<nav class="main-nav">
 				<ul>
@@ -46,8 +46,8 @@
 			<section class="main home-main">
 				<div class="info">
 					<h1>
-						Hola, I’m Lucheto <br />
-						A UX/UI designer and web developer
+						Hola, I’m Luis Martinez <br />
+						UX/UI designer and web developer
 					</h1>
 					<p>
 						I like finding creative marketing solutions through typography,
@@ -69,24 +69,32 @@
 			<section id="portfolio-projects" class="main">
 				<h3>Recent Projects</h3>
 				<ul class="projects">
+					
 					<li class="project">
-						<a id="aboga-preview" href="./portfolio/aboga.html">Aboga Online</a>
+						<a id="commander-preview" href="./portfolio/commander.html">
+							Commander
+						</a>
+						<p>Website for the first community-run projects in the BCS ecosystem. Commander DeFi allows its users to mint NFTs, stake and part-take in airdrops</p>
 					</li>
 
 					<li class="project">
 						<a id="floks-preview" href="./portfolio/muebles-floks.html">
 							Muebles Flok's
 						</a>
+						<p>Website for a custom made furniture store. </p>
 					</li>
 
 					<li class="project">
-						<a id="commander-preview" href="./portfolio/commander.html">
-							Commander
-						</a>
+						<a id="aboga-preview" href="./portfolio/aboga.html">Aboga Online</a>
+						<p>A marketplace and social media platform for lawyers </p>
 					</li>
+
+
+					
 
 					<li class="project">
 						<a id="pardela-preview" href="./portfolio/pardela.html">Pardela</a>
+						<p>Website for a film production company </p>
 					</li>
 
 					<!--           <li class="project">
