--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Lucheto</title>
+		<title>Luis Martinez - UX Developer</title>
 
 		<!--styles  -->
 		<link rel="stylesheet" href="assets/css/styles.css" />
@@ -31,7 +31,7 @@
 
 	<body>
 		<header class="header container">
-			<a class="logo" href="/">Lucheto</a>
+			<a class="logo" href="/">Luis Martinez</a>
 
 			<nav class="main-nav">
 				<ul>
@@ -57,16 +57,17 @@
 
 					<p class="small available">Available for freelance work</p>
 
-					<p>
-						I am a UX/UI designer from Mexico City. Currently, I'm working at
-						<a href="https://progroupx.com/">proGroupX</a> remotely.
-					</p>
+					<p>I am a designer who codes. Currently building WordPress themes, Shopify stores and coding email HTML templates. I have a background in UX/UI design, visual design, front-end development, and digital marketing.</p>
+					
+					<ul>
+						<li> I am a Designer and Marketer with 10+ years of experience; an expert in helping bootstrapped brands grow through digital marketing strategies.</li>
+						<li> Strong ability to combine UX/UI design fundamentals with copywriting frameworks; skilled in design and following brand strategies.</li>
+						<li> Proven experience coordinating multidisciplinary teams and increasing by 150% website leads of clients</li>
+						<li> Created a mobile application to sell organic products and worked independently in conceptualizing/developing websites.</li>
+						<li> Received positive feedback in 95% on projects and programmed 20+ WordPress themes.</li>
+						<li> Team player with an innovative and creative vision; deep understanding of management and optimization of website analytics.</li>
+					</ul>
 
-					<p>
-						From 2015 to 2021, I worked at a small web design agency called
-						&quot;Cómo se llama&quot; which I founded, where we developed all
-						kinds of websites, especially using WordPress.
-					</p>
 
 					<p>
 						I am a vetted
@@ -76,7 +77,7 @@
 
 					<p>
 						I am always learning new things. Right now, I'm obsessed with UX
-						processes and JamStack. However, in my free time, I'm learning about
+						processes and JamStack. In my free time, I'm learning about
 						crypto and NFTs.
 					</p>
 				</div>
