--- a/portfolio/pardela.html
+++ b/portfolio/pardela.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Lucheto - Portfolio Pardela</title>
+		<title>Luis Martinez - UI Developer - Portfolio Pardela</title>
 
 		<!--styles  -->
 		<link rel="stylesheet" href="assets/css/styles.css" />
@@ -31,7 +31,7 @@
 
 	<body>
 		<header class="header container">
-			<a class="logo" href="/">Lucheto</a>
+			<a class="logo" href="/">Luis Martinez</a>
 
 			<nav class="main-nav">
 				<ul>
