--- a/portfolio/sonia-luis.html
+++ b/portfolio/sonia-luis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Lucheto</title>
+    <title>Luis Martinez - UX Developer</title>
 
     <!--styles  -->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -32,7 +32,7 @@
 
   <body>
     <header class="header container">
-      <a class="logo" href="/">Lucheto</a>
+      <a class="logo" href="/">Luis Martinez</a>
 
       <nav class="main-nav">
         <ul>
